tests/dataset/tpc-ds/compiler/go/q98.error
go run error: exit status 1
panic: interface conversion: interface {} is *data.Group, not main.Grouped

goroutine 1 [running]:
main.main.main.func2.func6(...)
	/tmp/TestGoCompiler_TPCDSq982079470765/001/main.go:247
main.main.func2(...)
	/tmp/TestGoCompiler_TPCDSq982079470765/001/main.go:251
main.main()
	/tmp/TestGoCompiler_TPCDSq982079470765/001/main.go:255 +0x1505
exit status 2
